tests/should_fail/recursive_types/impl_arg.stderr
error: Illegal recursive trait
 --> impl_arg.rs:4:1
  |
4 | pub trait Q {
  | ^^^^^^^^^^^
  |
note: `Q` is a bound of `Q::f`
 --> impl_arg.rs:7:24
  |
7 |     fn f(self, x: impl Q);
  |                        ^

error: aborting due to 1 previous error

